# ggshield

./: .dockerignore  .env.example  .gitguardian.example  .gitguardian.example.yml  .gitguardian.yaml  .gitguardian.yml  .gitignore  .gitlab-ci.yml  .importlinter  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FIX_SYMLINK_ISSUE.md  LICENSE  Makefile  Pipfile  README.md  SECURITY.md  SECURITY.md.policy  action.yml  black.toml  maurol.dariii  pre-commit-config.local-example.yml  pre-commit-global.sh  pre-commit-local.sh  pyoxidizer.bzl  pyproject.toml  setup.cfg  setup.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_release_assets.yml  changelog-check.yml  ci.yml  main.yml  non-main.yml  perfbench.yml  scheduled.yml  sign.yml  tag.yml  test-lint.yml  update_vscode_extension.yml
.gitlab/: CODEOWNERS
.gitlab/issue_templates/: Bug.md  Feature.md
.gitlab/merge_request_templates/: Backend_feature.md  Bug.md  Frontend_feature.md
actions-unstable/: README.md
actions-unstable/iac/: Dockerfile  action.yml  entrypoint.sh
actions-unstable/sca/: action.yml
actions-unstable/secret/: action.yml  entrypoint.sh
actions/iac/: Dockerfile  action.yml  entrypoint.sh
actions/sca/: action.yml
actions/secret/: action.yml  entrypoint.sh
changelog.d/: 20230223_123152_aurelien.gateau_import.md  20230224_175647_aurelien.gateau_import.md  20230307_105105_aurelien.gateau_import.md  20230310_130923_aurelien.gateau_import.md  20230315_090907_aurelien.gateau_import.md  20230403_121625_samuel.guillaume_scrt_3269_ggshield_scan_removal.md  20230404_144426_alina.tuholukova_add_known_secrets_url.md  20230412_104256_aurelien.gateau_secretscanner_ui.md  20230417_123418_aurelien.gateau_cache_docker_successful_scan.md  20230427_182700_antonin.lacombe_create_honeytoken.md  20230510_161532_samuel.guillaume_fix_scan_option_ignore_known_secrets.md  20230517_105917_pierrelalanne_add_incident_url_to_json_output.md  20230517_164846_samuel.guillaume_417_pre_receive_timeout_is_not_precise_enough.md  20230523_142939_aurelien.gateau_use_server_side_cfg.md  20230526_113935_samuel.guillaume_json_and_text_outputs_dont_display_the_same_sha.md  20230529_105424_aurelien.gateau_update_charset_normalizer.md  20230529_173848_pierrelalanne_fix_gitlab_web_ui_output.md  20230601_174807_aurelien.gateau_improve_logging.md  20230607_193232_aurelien.gateau_improve_error_reporting.md  20230612_161810_antonin.lacombe_update_honeytoken_helps_and_error.md  20230614_170959_paul.petit.ext_hmsl_command.md  20230615_104700_arnaud.lustrat_support_max_lifetime_tokens.md  20230627_155817_paul.beslin.ext_iac_scan_diff_cmd.md  20230628_154138_aurelien.gateau_make_hmsl_optional.md  20230704_151917_aurelien.gateau_HEAD.md  20230704_152111_aurelien.gateau_docker_max_workers.md  20230705_120528_samuel.guillaume_scrt_3734_ggshield_improve_handling_of_quota_limit_reached_errors.md  20230705_164100_sylvain.baud.ext_iac_scan_parameters_fix.md  20230705_183308_aurelien.gateau_drop_3_7.md  20230707_170027_paul.beslin.ext_refactor_iac_scan_commands.md  20230712_171932_aurelien.gateau_fix_maximum_size_check.md  20230718_171624_paul.beslin.ext_iac_scan_ci_command.md  20230720_140628_antonin.lacombe_logout_hmsl_when_auth_logout.md  20230725_144801_paul.beslin.ext_update_github_action_iac_command.md  20230727_102601_samuel.guillaume_pin_pyyaml_gte_6_0_1.md  20230727_171745_antonin.lacombe_hmsl_env_files.md  20230801_183736_henri.hubert_allow_scan_all_pre_commit.md  20230801_185552_henri.hubert_add_ghsa_id.md  20230802_153039_henri.hubert_add_sca_scan_diff.md  20230807_180315_aurelien.gateau_config_set_instance.md  (+188 more)
doc/: pre-receive-docker.sample  pre-receive-python.sample  pre-receive.sample
doc/dev/: architecture.md  dependencies.md  error-handling.md  getting-started.md  os-packages.md  standalone-executables.md
doc/schemas/: api-status.json  config_list.json  quota.json  secret.json
docker/: actions-iac-entrypoint.sh  actions-sca-entrypoint.sh  actions-secret-entrypoint.sh  entrypoint.sh
ggshield/: __init__.py  __main__.py  auth.py  cache.py  ci.py  client.py  cmd.py  config.py  constants.py  dev_scan.py  docker.py  filter.py  ggshield.py  git_shell.py  hook_cmd.py  ignore.py  install.py  message.py  oauth.py  path.py  pre_receive_cmd.py  pypi.py  quota.py  scan.py  scannable.py  scannable_errors.py  status.py  text_utils.py  utils.py
ggshield/cli/: install.py  scan.py  token.py
ggshield/cmd/: cmd.py  common_options.py  debug_logs.py  ignore.py  install.py  main.py  quota.py  status.py
ggshield/config/: __init__.py  config.py
mine/: diamond_0.py  diamond_1.py  diamond_10.py  diamond_11.py  diamond_12.py  diamond_13.py  diamond_14.py  diamond_15.py  diamond_16.py  diamond_17.py  diamond_18.py  diamond_19.py  diamond_2.py  diamond_20.py  diamond_21.py  diamond_22.py  diamond_23.py  diamond_24.py  diamond_25.py  diamond_26.py  diamond_27.py  diamond_28.py  diamond_29.py  diamond_3.py  diamond_4.py  diamond_5.py  diamond_6.py  diamond_7.py  diamond_8.py  diamond_9.py
pygitguardian/: schemas.py
scripts/: README.md  build-standalone-exe  check-import-linter-config.sh  create-ghe-environment  download  generate-import-linter-config.py  push-to-cloudsmith  release  run-functional-tests
secrets_shield/: __init__.py  client.py  commit.py  config.py  message.py  scannable.py  secrets_shield.py  utils.py
tests/: conftest.py  factories.py  factory_constants.py  repository.py  test_auth_cli.py  test_cache.py  test_ci.py  test_cli.py  test_commit.py  test_config.py  test_crash_log.py  test_docker.py  test_factories.py  test_filter.py  test_git_shell.py  test_hook_cmd.py  test_ignore.py  test_install.py  test_install_cli.py  test_message.py  test_path.py  test_path_scan_cli.py  test_prepush_cmd.py  test_prereceive_cmd.py  test_pypi.py  test_repo_scan_cli.py  test_scan.py  test_scannable.py  test_scannable_errors.py  test_status_cli.py  test_text_utils.py  test_utils.py
(+1000 files in other folders)
