[flake8]
inline-quotes = double
max-line-length = 88
ignore = E203, W503
exclude = **/snapshots/*.py

[metadata]
description-file = README.md

[isort]
profile = black
lines_after_imports = 2

[coverage:report]
omit = tests/*
fail_under = 80
show_missing = True

[coverage:run]
source = .
omit = tests/*

[mypy]
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_defs=True
follow_imports = silent
ignore_missing_imports = True
no_implicit_optional=True
python_version=3.8
strict_equality=True
strict_optional=True
warn_incomplete_stub = True
warn_redundant_casts=True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
warn_unused_ignores = True

[mypy-tests.*]
ignore_errors = True
